// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityList Many Items 1`] = `
<div
  className="dd list-container"
>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Foo: Foo 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1 bg-primary"
    >
      published
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Foo: Foo archived
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1 bg-danger"
    >
      archived
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Bar 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Bar 2
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Baz: Baz 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 0
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 2
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 3
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 4
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 5
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 6
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 7
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 8
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 9
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 10
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 11
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 12
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 13
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 14
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 15
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 16
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 17
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 18
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Generated bar 19
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <div
    className="dd flex-row"
  >
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={true}
      type="button"
    >
      Start
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={true}
      type="button"
    >
      Previous
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      End
    </button>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityList Normal 1`] = `
<div
  className="dd list-container"
>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Foo: Foo 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1 bg-primary"
    >
      published
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Foo: Foo archived
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1 bg-danger"
    >
      archived
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Bar 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Bar: Bar 2
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    onClick={[Function]}
    type="button"
  >
    Baz: Baz 1
    <span
      className="dd has-background text-caption p-1 is-rounded ml-1"
    >
      draft
    </span>
  </button>
  <div
    className="dd flex-row"
  >
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={true}
      type="button"
    >
      Start
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={true}
      type="button"
    >
      Previous
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={true}
      type="button"
    >
      Next
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      disabled={true}
      type="button"
    >
      End
    </button>
  </div>
</div>
`;
